--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,8 +8,9 @@ website:
   reader-mode: true
   page-navigation: true
   description: ""
+  favicon: "./figures/avatar.jpg"
   site-url: https://giulianocolosimo.github.io/animal_tracking_23_24/
-  repo-url: https://github.com/quarto-dev/quarto-demo
+  #repo-url: https://github.com/quarto-dev/quarto-demo
   repo-actions: [issue]
   open-graph:
     locale: en_US
