--- a/_quarto.yml
+++ b/_quarto.yml
@@ -38,8 +38,8 @@ website:
          text: "Class 2"                # 
        - href: ./classes/3/class_3.html
          text: "Class 3"
-#       - href: ./classes/4/class_4.html
-#         text: "Class 4"
+       - href: ./classes/4/class_4.html
+         text: "Class 4"
 #       - href: ./classes/5/class_5.html
 #         text: "Class 5"
 #       - href: ./classes/6/class_6.html
