--- a/_quarto.yml
+++ b/_quarto.yml
@@ -42,8 +42,8 @@ website:
          text: "Class 4"
        - href: ./classes/5/class_5.html
          text: "Class 5"
-#       - href: ./classes/6/class_6.html
-#         text: "Class 6"
+       - href: ./classes/6/class_6.html
+         text: "Class 6"
 #       - href: ./classes/7/class_7.html
 #         text: "Class 7"
 #       - href: ./classes/8/class_8.html
